src/main/k8s/single-mongo/web-service.yml
apiVersion: v1
kind: Service
metadata:
 name: web
 labels:
   name: web
spec:
# type: NodePort
 type: LoadBalancer
 ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
#     nodePort: 30000
 selector:
   name: web
