src/main/k8s/single-mongo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          # the targetPort from service (the port inside a container)
          servicePort: 80
